<resources>
    <string name="app_name">Arkhire Talent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="become_your_hiring_apps">BECOME YOUR HIRING APPS</string>
    <string name="handshake_desc">Arkhire will provide all information about your hiring progress, Of course with realtime update. All information about hiring will showed on your hand.</string>
    <string name="button_next"><![CDATA[Next]]></string>
    <string name="connect_company">CONNECT COMPANY WITH YOU</string>
    <string name="connect_companyDesc">Arkhire will connect you with our registered company, So it will possible to let you know about the company information who needs you as their engineer.</string>
    <string name="salary_transparency">SALARY TRANSPARENCY</string>
    <string name="desc_salaryTransparency">Afraid of your project salary? no need to worries Arkhire will show how much company pay your work. This what we call transparency.</string>
    <string name="arkhire">Arkhire</string>
    <string name="register_desc">Let\'s Get Started By Creating Your Account</string>
    <string name="register_title">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="input_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="re_input_password">Re-Input Password</string>
    <string name="already_have_account_click_here">Already Have Account? Click Here</string>
    <string name="register">REGISTER</string>
    <string name="forget_password">Forget Password</string>
    <string name="to_continue_please_input_your_registered_email">To continue, Please input your registered email</string>
    <string name="registered_email_address">Registered Email Address</string>
    <string name="send_recovery_email">SEND RECOVERY EMAIL</string>
    <string name="no_messages">No Messages</string>
    <string name="project_offered">Project Offered</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
    <string name="highlight">Project Highlight</string>
    <string name="click_me">Click Me</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="welcome_lets_start_explore_the_world">Welcome, Let\'s get started</string>
    <string name="join_us">Register</string>
    <string name="download_cv">Download CV</string>
    <string name="city">City</string>
    <string name="tell_me_about_you">Tell Me about You (Max: 480)</string>
    <string name="working_time">Working Time</string>
    <string name="done">Done</string>
    <string name="your_title">Your Title</string>
    <string name="github_nickname">Github Nickname (Optional)</string>
    <string name="skill">Skill</string>
    <string name="nothing_here">Nothing Here</string>
    <string name="are_you_sure_want_hire_this_talent">Are You Sure Want Hire This Talent ?</string>
    <string name="massage_for_talent">Massage for talent</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="html_css"><![CDATA[HTML & CSS]]></string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut pulvinar porttitor arcu, in rhoncus libero ultricies eget. Nullam eget vulputate sapien, eu posuere metus. Praesent bibendum nisl at ultrices ullamcorper. In in pretium erat. Sed volutpat erat pulvinar tortor rutrum consectetur. Integer a ligula risus. Sed hendrerit sed augue vel elementum. Sed imperdiet tellus a quam mattis feugiat. Suspendisse turpis mauris, congue in neque eu, luctus vulputate quam. Suspendisse potenti. Donec pretium consequat urna ut tincidunt.</string>
    <string name="lite_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas elit ligula, aliquam sed eros in, pretium malesuada elit. Cras euismod dictum placerat. Aliquam et mauris non metus venenatis malesuada. Nullam venenatis porta ipsum id tristique.</string>
    <string name="welcome">Welcome</string>
    <string name="back">Back</string>
    <string name="looking_for">Looking For</string>
    <string name="company_description">Company Description</string>
    <string name="company_location">Company Location</string>
    <string name="_404_not_found">404 NOT FOUND</string>
    <string name="project_list">All Project</string>
    <string name="project_not_found">Project Not Found</string>
    <string name="not_found">Not Found !</string>
    <string name="add_portfolio">Add portfolio</string>
    <string name="create_portfolio_so_company_can_see_your_achivement">Create Portfolio, So Company Can See your achivement</string>
    <string name="portfolio_name">Portfolio Name</string>
    <string name="describe_this_portfolio_max_500">Describe This portfolio (Max. 500)</string>
    <string name="pick_image">PICK IMAGE</string>
    <string name="link_repository_of_this_portfolio_optional">Link Repository of this portfolio (Optional)</string>
    <string name="adding_portfolio">Adding Portfolio</string>
    <string name="adding_experience">Adding Experience</string>
    <string name="tell_company_that_you_experienced_on_this_title">Tell company about your experiences on this job</string>
    <string name="experience_description">Experience Description (Max: 500) (Optional)</string>
    <string name="experience_title">Experience Title</string>
    <string name="company_name">Company Name</string>
    <string name="start_from">Start From</string>
    <string name="end_at_present">End at/Present</string>
    <string name="add_work_experience">Add Work Experience</string>
    <string name="configure_profile_so_people_can_recognize_you">Configure Profile so people can recognize you</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="portfolio_title">Portfolio Title :</string>
    <string name="portfolio_description">Portfolio Description :</string>
    <string name="link_repository_of_this_portfolio">Link Repository Of This Portfolio :</string>
    <string name="edit_project">EDIT PROJECT</string>
    <string name="delete_project">DELETE PROJECT</string>
    <string name="delete_portfolio">DELETE PORTFOLIO</string>
    <string name="edit_portfolio">EDIT PORTFOLIO</string>
    <string name="changes_can_t_be_reverted_restored">Changes can\'t be Reverted / Restored</string>
    <string name="are_you_sure_want_to_delete_this">ARE YOU SURE WANT TO DELETE THIS ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="experienced_as">Experienced As :</string>
    <string name="experienced_from">Experienced From :</string>
    <string name="started">Started</string>
    <string name="about_experience">About Experience</string>
    <string name="delete_experience">DELETE EXPERIENCE</string>
    <string name="loging_in">Loging In…</string>
    <string name="creating_account">Creating Account…</string>
    <string name="menu">menu</string>
    <string name="email_settings">Email Settings</string>
    <string name="please_verify_your_identity_to_continue">Please Verify your identity to continue</string>
    <string name="new_email_address">New Email Address..</string>
    <string name="updatingEmail">Updating Email…</string>
    <string name="password_settings">Password Settings</string>
    <string name="sign_up_question">Sign Up</string>
    <string name="let_s_get_started_by_creating_your_account">Let\'s Get Started!</string>
    <string name="create_account_to_join_arkhire">Create account to become partner and start exploring</string>
    <string name="sign_up">Sign Up</string>
    <string name="uploading_portfolio">Uploading Portfolio...</string>
    <string name="this_is_first_time_you_loged_in_to_continue_please_finish_your_profile">This is first time you loged in, To continue please finish your profile</string>


</resources>