<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".homepage.item.account.profile.workexperience.add.AddWorkExperienceActivity">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="#E5E5E5">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <View
          android:id="@+id/topView"
          android:layout_width="match_parent"
          android:layout_height="150dp"
          android:background="@color/primary"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/tv_arkhire"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="32dp"
          android:layout_marginTop="32dp"
          android:text="@string/adding_experience"
          android:textColor="@color/white"
          android:textSize="32sp"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:layout_below="@+id/tv_arkhire"
          android:text="@string/tell_company_that_you_experienced_on_this_title"
          android:layout_marginStart="32dp"
          android:textColor="@color/white"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@drawable/bg_myprofile"
          android:orientation="vertical"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/topView">

        <EditText
            android:id="@+id/et_newExperiencePosition"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_edit_text"
            android:drawablePadding="16dp"
            android:ems="10"
            android:textSize="14sp"
            android:maxLength="20"
            android:hint="@string/experience_title"
            android:padding="16dp" />

        <EditText
            android:id="@+id/et_experienceSource"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_edit_text"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/company_name"
            android:padding="16dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_experienceStart"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_edit_text"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/start_from"
            android:padding="16dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_experienceEnd"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_edit_text"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/end_at_present"
            android:padding="16dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_experienceDesc"
            android:layout_width="349dp"
            android:layout_height="130dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_edit_text"
            android:padding="4dp"
            android:drawablePadding="16dp"
            android:gravity="start"
            android:ems="10"
            android:maxLength="500"
            android:hint="@string/experience_description"
            android:textSize="14sp" />

        <android.widget.Button
            android:id="@+id/bt_newExperienceDone"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_bg"
            android:text="@string/done"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
      </LinearLayout>
    </ScrollView>
  </LinearLayout>

</layout>
