<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".homepage.item.account.profile.portfolio.create.CreatePortfolioActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E5E5E5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/topView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_arkhire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/adding_portfolio"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_below="@+id/tv_arkhire"
                android:text="@string/create_portfolio_so_company_can_see_your_achivement"
                android:layout_marginStart="32dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_myprofile"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topView">

                <EditText
                    android:id="@+id/et_newPortfolioTitle"
                    android:layout_width="349dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/bg_edit_text"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:textSize="14sp"
                    android:hint="@string/portfolio_name"
                    android:padding="16dp" />

                <EditText
                    android:id="@+id/et_newPortfolioDesc"
                    android:layout_width="349dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/bg_edit_text"
                    android:padding="4dp"
                    android:drawablePadding="16dp"
                    android:gravity="start"
                    android:ems="10"
                    android:maxLength="500"
                    android:hint="@string/describe_this_portfolio_max_500"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_newPortfolioRepository"
                    android:layout_width="349dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/bg_edit_text"
                    android:drawablePadding="16dp"
                    android:ems="10"
                    android:hint="@string/link_repository_of_this_portfolio_optional"
                    android:padding="16dp"
                    android:textSize="14sp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:background="#DAD7D7"
                    android:layout_width="match_parent"
                    android:layout_height="190dp">

                    <ImageView
                        android:id="@+id/iv_editPortfolioImage"
                        android:src="@drawable/ic_account"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_pickImage"
                    android:text="@string/pick_image"
                    android:textColor="@color/white"
                    android:background="@color/primary"
                    android:layout_marginTop="12dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="120dp"
                    android:layout_height="40dp"/>


                <android.widget.Button
                    android:id="@+id/bt_newPortfolioDone"
                    android:layout_width="349dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/round_bg"
                    android:text="@string/done"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>
