<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".homepage.item.account.profile.workexperience.details.WorkExperienceDetailActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_titleExperience"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/experienced_as"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_experienceTitle"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:layout_width="380dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_titleExperienceFrom"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/experienced_from"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_experienceFrom"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:layout_width="380dp"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_tittleStart"
                android:layout_marginStart="16dp"
                android:text="@string/started"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_experienceStart"
                android:layout_below="@id/tv_tittleStart"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_tittleEnd"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:text="Ended"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_experienceEnd"
                android:layout_below="@id/tv_tittleEnd"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_titleExperienceDesc"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/about_experience"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_ExperienceDesc"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:paddingStart="8dp"
            android:maxLength="500"
            android:justificationMode="inter_word"
            android:layout_width="380dp"
            android:layout_height="150dp"/>

        <TextView
            android:id="@+id/tv_experienceDelete"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="18dp"
            android:text="@string/delete_experience"
            android:textSize="16sp"
            android:textColor="#FF0000"
            android:gravity="center_vertical|center_horizontal"
            android:background="@color/white"
            android:maxLength="300"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </LinearLayout>
</layout>